--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Random Quotes App</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rick & Morty</title>
 </head>
 
 <body>
-    <div class="background js-background">
-    </div>
-    <div class="container js-container">
-        <p class="greeting js-greeting"></p>
-        <div class="quote js-quote">
 
+    <div class="container container__home">
+        <div class="menu">
+            <img src="img/logo.png" alt="Logo Rick and morty">
+            <nav>
+                <a href="#">Characters</a>
+                <a href="#">Locations</a>
+                <a href="#">Episodes</a>
+            </nav>
+        </div>
+
+        <div class="search-bar">
+            <input type="text" name="search_bar" placeholder="Search a character, location or episode">
+            <div class="search-icon"></div>
         </div>
     </div>
+
 </body>
 
 </html>
