--- a/src/characters.html
+++ b/src/characters.html
@@ -10,8 +10,12 @@
 
 <body>
 
-    <div class="container container__home">
+    <div class="container container__characters">
         <div class="menu"></div>
+        <div class="characters">
+
+        </div>
+
     </div>
 
 </body>
