--- a/src/characters.html
+++ b/src/characters.html
@@ -11,10 +11,12 @@
 <body>
 
     <div class="container container__characters">
-        <div class="menu"></div>
-        <div class="characters">
 
-        </div>
+        <div class="menu"></div>
+
+        <div class="search-bar search-bar__characters"></div>
+
+        <div class="characters"></div>
 
     </div>
 
