--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,8 @@
         <!-- MENU -> header.js  -->
         <div class="menu"></div>
 
-        <div class="search-bar">
-            <input type="text" name="search_bar" placeholder="Search a character, location or episode">
-            <div class="search-icon"></div>
-        </div>
+        <div class="search-bar search-bar__home"></div>
+
     </div>
 
 </body>
