Mise en place recherche dynamique page Characters

--- a/src/characters.html
+++ b/src/characters.html
@@ -16,7 +16,7 @@
 
         <div class="search-bar search-bar__characters"></div>
 
-        <div class="characters"></div>
+        <ul class="characters list"></ul>
 
     </div>
 
