Ajout page locations et episodes

--- a/src/episodes.html
+++ b/src/episodes.html
@@ -10,13 +10,13 @@
 
 <body>
 
-  <div class="container container__characters">
+  <div class="container container__episodes">
 
     <div class="menu"></div>
 
-    <div class="search-bar search-bar__locations"></div>
+    <div class="search-bar search-bar__episodes"></div>
 
-    <div class="locations list"></div>
+    <div class="episodes list"></div>
 
     <input type="button" value="Load more">
 
