--- a/src/characters.html
+++ b/src/characters.html
@@ -16,7 +16,7 @@
 
         <div class="search-bar search-bar__characters"></div>
 
-        <ul class="characters list"></ul>
+        <ul class="characters elements list"></ul>
 
         <input type="button" value="Load more">
 
