--- a/src/episodes.html
+++ b/src/episodes.html
@@ -16,7 +16,7 @@
 
     <div class="search-bar search-bar__episodes"></div>
 
-    <div class="episodes list"></div>
+    <div class="episodes elements list"></div>
 
     <input type="button" value="Load more">
 
