--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,20 @@
         <!-- MENU -> header.js  -->
         <div class="menu"></div>
 
-        <div class="search-bar search-bar__home"></div>
+        <h2>Categories</h2>
+
+        <div class="categories">
+            <a href="/characters.html" class="category">
+                <h3>Characters</h3>
+            </a>
+            <a href="/locations.html" class="category">
+                <h3>Locations</h3>
+            </a>
+            <a href="/episodes.html" class="category">
+                <h3>Episodes</h3>
+            </a>
+        </div>
+
 
     </div>
 
