--- a/src/locations.html
+++ b/src/locations.html
@@ -16,7 +16,7 @@
 
     <div class="search-bar search-bar__locations"></div>
 
-    <div class="locations list"></div>
+    <div class="locations elements list"></div>
 
     <input type="button" value="Load more">
 
